--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
 *{
     background-color: #F0E9D2;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
