--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,10 +4,11 @@
 
 <ol class="post-list">
 <!-- posts array -->
-{{#each blogposts as |blogpost|}}
+{{#each posts as |blogpost|}}
 <div class="card align-center">
-  <h3><a href="/blogpost/{{blogpost.id}}">{{blogpost.title}}</a> <span class='added'>(Posted by
+  <h3><a href="/blogpost/{{blogpost.id}}">{{blogpost.name}}</a> <span class='added'>(Posted by
       {{blogpost.user.username}} on {{format_date blogpost.createdAt}})</span></h3>
   <p>{{blogpost.content}}</p>
+  
 </div>
 {{/each}}
