--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/ed07b029b7.js" crossorigin="anonymous"></script>
     
-    <title>Welcome to InOrOut!</title>
+    <title>Tech Blog</title>
 </head>
 
 <body>
