--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <nav>
+      <nav class="textcolor">
         <a href="/">Home</a>
         <a href="/dashboard">Dashboard</a>
         {{#if loggedIn}}
