--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,8 @@
     background-color: #F0E9D2;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+.design{
+    background-color: brown;
+    border: solid grey;
+
+}
