--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -38,7 +38,7 @@
 {{else}}
 <div class='dashboard'>
   {{#each posts as |blogpost|}}
-  <div class="card align-center">
+  <div class="card align-center design">
     <h3><a href="/blogpost/{{blogpost.id}}">{{blogpost.name}}</a> <span class='added'>(Posted by
       {{blogpost.user.username}} on {{format_date blogpost.createdAt}})</span></h3>
   <p>{{blogpost.content}}</p>
